updated CSS for hding disabled dates

--- a/examples/combobox/aria1.1pattern/css/datepicker-combobox.css
+++ b/examples/combobox/aria1.1pattern/css/datepicker-combobox.css
@@ -187,13 +187,7 @@
 }
 
 .datepickerCombobox .dateButton.disabled {
-  background-color: transparent;
-  border-color: transparent;
-}
-
-.datepickerCombobox .dateButton.disabled:hover {
-  background-color: transparent;
-  border-color: transparent;
+  visibility: hidden;
 }
 
 .datepickerCombobox .comboboxMessage {
