--- a/examples/feed/css/feedDisplay.css
+++ b/examples/feed/css/feedDisplay.css
@@ -5,10 +5,7 @@ body {
 
 #sidepanel {
   box-sizing: border-box;
-  display: inline-block;
-  padding-left: 1.5em;
-  vertical-align: top;
-  width: 29%;
+  margin-bottom: 1em;
 }
 
 #delay-time-select {
