--- a/examples/carousel/css/carousel-tablist-more-accessible.css
+++ b/examples/carousel/css/carousel-tablist-more-accessible.css
@@ -1,7 +1,7 @@
 
 /* .carousel */
 
-.carouselTablist {
+.carousel-tablist {
   padding: 0;
   margin: 0;
   position: relative;
@@ -10,7 +10,7 @@
   border-radius: 5px;
 }
 
-.carouselTablist [role=tabpanel] {
+.carousel-tablist [role=tabpanel] {
   padding: 0;
   margin: 0;
   display: none;
@@ -19,34 +19,34 @@
   width: 100%;
 }
 
-.carouselTablist [role=tabpanel].active {
+.carousel-tablist [role=tabpanel].active {
   display: block;
 }
 
-.carouselTablist .carousel-items .carousel-image {
+.carousel-tablist .carousel-items .carousel-image {
   margin: 0;
   padding: 1px;
   border: 4px solid transparent;
 }
 
-.carouselTablist .carousel-items.focus .carousel-image {
+.carousel-tablist .carousel-items.focus .carousel-image {
   border-color: #005a9c;
 }
 
-.carouselTablist .carousel-items .carousel-image a[href],
-.carouselTablist .carousel-items .carousel-image a[href]:focus {
+.carousel-tablist .carousel-items .carousel-image a[href],
+.carousel-tablist .carousel-items .carousel-image a[href]:focus {
   padding: 0;
   margin: 0;
   border: none;
 }
 
-.carouselTablist [role=tabpanel] .carousel-image a img {
+.carousel-tablist [role=tabpanel] .carousel-image a img {
   width: 100%;
 }
 
 /* More accessible caption stylinh */
 
-.carouselTablist [role=tabpanel] .carousel-caption {
+.carousel-tablist [role=tabpanel] .carousel-caption {
   padding: 0;
   margin: 0;
   height: 60px;
@@ -57,7 +57,7 @@
   text-align: center;
 }
 
-.carouselTablist [role=tabpanel] .carousel-caption a {
+.carousel-tablist [role=tabpanel] .carousel-caption a {
   display: inline-block;
   margin: 0;
   padding: 2px;
@@ -67,40 +67,40 @@
   text-decoration: underline;
 }
 
-.carouselTablist [role=tabpanel] .carousel-caption p {
+.carousel-tablist [role=tabpanel] .carousel-caption p {
   padding: 0;
   margin: 0;
   font-size: 1em;
   line-height: 1.5;
 }
 
-.carouselTablist [role=tabpanel] .carousel-caption h3 {
+.carousel-tablist [role=tabpanel] .carousel-caption h3 {
   font-size: 1.1em;
   padding: 0;
   margin: 0;
 }
 
-.carouselTablist [role=tabpanel] .carousel-caption h3 a {
+.carousel-tablist [role=tabpanel] .carousel-caption h3 a {
   font-weight: 600;
 }
 
-.carouselTablist [role=tabpanel] .carousel-caption a:hover {
+.carousel-tablist [role=tabpanel] .carousel-caption a:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.carouselTablist [role=tabpanel] .carousel-caption a:focus {
+.carousel-tablist [role=tabpanel] .carousel-caption a:focus {
   border-color: #005a9c;
 }
 
 /* Shared CSS for Pause and Tab Controls */
 
-.carouselTablist .controls {
+.carousel-tablist .controls {
   position: relative;
 }
 
 /* Pause Control */
 
-.carouselTablist .controls button.rotation {
+.carousel-tablist .controls button.rotation {
   padding: 0;
   position: absolute;
   background-color: transparent;
@@ -111,59 +111,59 @@
   z-index: 20;
 }
 
-.carouselTablist .controls button svg rect.background {
+.carousel-tablist .controls button svg rect.background {
   stroke: black;
   fill: black;
   stroke-width: 1px;
   opacity: 0.6;
 }
 
-.carouselTablist .controls button svg rect.border {
+.carousel-tablist .controls button svg rect.border {
   fill: transparent;
   stroke: transparent;
   stroke-width: 2px;
 }
 
-.carouselTablist .controls button.rotation svg polygon.pause {
+.carousel-tablist .controls button.rotation svg polygon.pause {
   stroke-width: 4;
   fill: transparent;
   stroke: transparent;
 }
 
-.carouselTablist .controls button.rotation svg polygon.play {
+.carousel-tablist .controls button.rotation svg polygon.play {
   stroke-width: 1;
   fill: transparent;
   stroke: transparent;
 }
 
-.carouselTablist .controls button.rotation.pause svg polygon.pause,
-.carouselTablist .controls button.rotation.play svg polygon.play {
+.carousel-tablist .controls button.rotation.pause svg polygon.pause,
+.carousel-tablist .controls button.rotation.play svg polygon.play {
   fill: white;
   stroke: white;
 }
 
-.carouselTablist .controls button.rotation:focus rect.background,
-.carouselTablist .controls button.rotation:hover rect.background,
-.carouselTablist .controls button.rotation:focus rect.border,
-.carouselTablist .controls button.rotation:hover rect.border {
+.carousel-tablist .controls button.rotation:focus rect.background,
+.carousel-tablist .controls button.rotation:hover rect.background,
+.carousel-tablist .controls button.rotation:focus rect.border,
+.carousel-tablist .controls button.rotation:hover rect.border {
   fill: #005a9c;
   stroke: #005a9c;
   opacity: 1;
 }
 
-.carouselTablist .controls button.rotation:focus rect.border {
+.carousel-tablist .controls button.rotation:focus rect.border {
   stroke: white;
 }
 
 /* Shared CSS for Tabs */
 
-.carouselTablist [role="tablist"] {
+.carousel-tablist [role="tablist"] {
   position: relative;
   top: 4px;
   text-align: center;
 }
 
-.carouselTablist [role="tablist"] .border {
+.carousel-tablist [role="tablist"] .border {
   display: inline-block;
   border: 2px transparent solid;
   border-radius: 13px;
@@ -171,12 +171,12 @@
   background-color: transparent;
 }
 
-.carouselTablist [role="tablist"] .focus {
+.carousel-tablist [role="tablist"] .focus {
   border-color: white;
   background-color: #005a9c;
 }
 
-.carouselTablist button[role="tab"] {
+.carousel-tablist button[role="tab"] {
   position: relative;
   top: -2px;
   padding: 0;
@@ -188,16 +188,16 @@
   z-index: 20;
 }
 
-.carouselTablist [role="tab"] circle.border {
+.carousel-tablist [role="tab"] circle.border {
   display: none;
   z-index: 14;
 }
 
-.carouselTablist [role="tab"] circle.tab {
+.carousel-tablist [role="tab"] circle.tab {
   z-index: 18;
 }
 
-.carouselTablist [role="tab"] circle.tab-background {
+.carousel-tablist [role="tab"] circle.tab-background {
   stroke: black;
   fill: black;
   stroke-width: 2px;
@@ -205,34 +205,34 @@
   z-index: 16;
 }
 
-.carouselTablist [role="tab"] circle.tab,
-.carouselTablist [role="tab"] circle.border {
+.carousel-tablist [role="tab"] circle.tab,
+.carousel-tablist [role="tab"] circle.border {
   stroke: white;
   fill: transparent;
   stroke-width: 2px;
 }
 
-.carouselTablist [role="tab"][aria-selected="true"] circle.tab {
+.carousel-tablist [role="tab"][aria-selected="true"] circle.tab {
   fill: white;
 }
 
-.carouselTablist [role="tab"]:focus circle.border {
+.carousel-tablist [role="tab"]:focus circle.border {
   display: block;
 }
 
-.carouselTablist [role="tablist"] .focus circle.tab-background {
+.carousel-tablist [role="tablist"] .focus circle.tab-background {
   stroke: #005a9c;
   fill: #005a9c;
 }
 
-.carouselTablist [role="tab"]:hover circle.tab-background {
+.carousel-tablist [role="tab"]:hover circle.tab-background {
   fill: white;
   stroke: white;
   opacity: 1;
 }
 
-.carouselTablist [role="tab"]:hover circle.border,
-.carouselTablist [role="tab"]:hover circle.tab {
+.carousel-tablist [role="tab"]:hover circle.border,
+.carousel-tablist [role="tab"]:hover circle.tab {
   fill: #005a9c;
   stroke: #005a9c;
   opacity: 1;
