--- a/examples/combobox/css/combobox.css
+++ b/examples/combobox/css/combobox.css
@@ -1,36 +1,107 @@
-.annotate {
-  font-style: italic;
-  color: #366ed4;
-}
-
 .combobox-list {
   position: relative;
 }
 
-.combobox-inline label,
-.combobox-list label {
+.combobox .group {
+  display: inline-flex;
+}
+
+.combobox .group input,
+.combobox .group button {
+  background-color: white;
+  color: black;
+  box-sizing: border-box;
+  height: 1.5rem;
+  padding: 0 0.25em;
+  margin: 0;
+  vertical-align: bottom;
+  border: 1px solid gray;
+}
+
+.combobox .group input {
+  width: 10rem;
+  border-right: none;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  outline: none;
+}
+
+.combobox .group button {
+  width: 1.5rem;
+  border-left: none;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  outline: none;
+  font-size: 85%;
+}
+
+.combobox .group.focus input,
+.combobox .group.focus button {
+  background-color: #d6e8f5;
+  border-color: #348ccb;
+}
+
+.combobox .group.focus {
+  outline: 2px solid black;
+  outline-offset: 1px;
+}
+
+ul[role="listbox"] {
   margin: 0;
   padding: 0;
-  display: block;
-}
-
-.combobox-list .group input,
-.combobox-list .group button {
-  display: inline;
+  position: absolute;
+  left: 0;
+  top: 1.5rem;
+  list-style: none;
   background-color: #eee;
+  display: none;
+  box-sizing: border-box;
+  border: 1px gray solid;
+  border-radius: 3px;
+  max-height: 12em;
+  width: 11.5rem;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
-.combobox-list .group input.focus {
-  background-color: #d6e8f5;
-  outline-color: #348ccb;
-}
-
-.combobox-list .group button {
+ul[role="listbox"] li[role="option"] {
   margin: 0;
-  padding: 0 0.125em 0 0.125em;
-  position: relative;
-  top: 1px;
-  left: -2px;
-  font-size: 85%;
+  padding: 0;
+  padding-left: 0.125em;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+}
+
+[role="listbox"].focus {
+  border-color: #348ccb;
+}
+
+[role="listbox"] [role="option"] {
+  display: block;
+  margin: 0.25em;
+  padding: 0;
   background-color: #eee;
+  font-size: 100%;
+}
+
+/* focus and hover styling */
+
+[role="listbox"] [role="option"][aria-selected="true"] {
+  background-color: #ccc;
+}
+
+[role="listbox"].focus [role="option"][aria-selected="true"] {
+  background-color: #aed2ea;
+  border-color: #348ccb;
+}
+
+@media (forced-colors: active), (-ms-high-contrast: active) {
+  [role="listbox"].focus [role="option"][aria-selected="true"] {
+    background-color: highlight;
+    color: highlighttext;
+  }
+}
+
+[role="listbox"] li[role="option"]:hover {
+  background-color: #c2ddef;
 }
