--- a/examples/combobox/css/combobox.css
+++ b/examples/combobox/css/combobox.css
@@ -11,34 +11,26 @@
   background-color: white;
   color: black;
   box-sizing: border-box;
-  height: 1.5rem;
-  padding: 0 0.25em;
+  height: 1.75rem;
+  padding: 0;
   margin: 0;
   vertical-align: bottom;
   border: 1px solid gray;
 }
 
 .combobox .group input {
-  width: 10rem;
+  width: 10.75rem;
   border-right: none;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
   outline: none;
+  font-size: 87.5%;
+  padding: 0.1em 0.3em;
 }
 
 .combobox .group button {
-  width: 1.5rem;
+  width: 1.25rem;
   border-left: none;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
   outline: none;
-  font-size: 85%;
-}
-
-.combobox .group.focus input,
-.combobox .group.focus button {
-  background-color: #d6e8f5;
-  border-color: #348ccb;
+  font-size: 70%;
 }
 
 .combobox .group.focus {
@@ -51,57 +43,44 @@ ul[role="listbox"] {
   padding: 0;
   position: absolute;
   left: 0;
-  top: 1.5rem;
+  top: 1.75rem;
   list-style: none;
-  background-color: #eee;
+  background-color: white;
   display: none;
   box-sizing: border-box;
   border: 1px gray solid;
-  border-radius: 3px;
+  border-top: none;
   max-height: 12em;
-  width: 11.5rem;
+  width: 12rem;
   overflow: scroll;
   overflow-x: hidden;
+  font-size: 87.5%;
 }
 
 ul[role="listbox"] li[role="option"] {
-  margin: 0;
-  padding: 0;
-  padding-left: 0.125em;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-}
-
-[role="listbox"].focus {
-  border-color: #348ccb;
-}
-
-[role="listbox"] [role="option"] {
   display: block;
-  margin: 0.25em;
-  padding: 0;
-  background-color: #eee;
-  font-size: 100%;
+  margin: 0;
+  padding: 0.1em 0.3em;
 }
 
 /* focus and hover styling */
 
-[role="listbox"] [role="option"][aria-selected="true"] {
-  background-color: #ccc;
-}
-
 [role="listbox"].focus [role="option"][aria-selected="true"] {
-  background-color: #aed2ea;
-  border-color: #348ccb;
+  background-color: #DEF;
+  border-color: #8CCBF2;
 }
 
 @media (forced-colors: active), (-ms-high-contrast: active) {
   [role="listbox"].focus [role="option"][aria-selected="true"] {
+    -ms-high-contrast-adjust: none; /* disable the backgrounds that Edge puts behind text */
     background-color: highlight;
     color: highlighttext;
+    border-color: currentcolor;
   }
 }
 
 [role="listbox"] li[role="option"]:hover {
-  background-color: #c2ddef;
+  background-color: #DEF;
 }
