adjusted position of svg image button

--- a/examples/combobox/css/combobox-autocomplete.css
+++ b/examples/combobox/css/combobox-autocomplete.css
@@ -34,7 +34,7 @@
 }
 
 .combobox .group button.open svg {
-  transform: rotate(180deg);
+  transform: rotate(180deg) translate(0, -1px);
 }
 
 .combobox .group.focus {
@@ -42,8 +42,20 @@
   outline-offset: 1px;
 }
 
-.combobox .group.focus input {
+.combobox .group.focus input,
+.combobox .group.focus button {
   background-color: #DEF;
+}
+
+.combobox .group svg polygon {
+  fill: gray;
+  stroke: gray;
+}
+
+.combobox button.open svg polygon,
+.combobox .group.focus svg polygon {
+  fill: black;
+  stroke: black;
 }
 
 ul[role="listbox"] {
