--- a/examples/accordion/css/accordion.css
+++ b/examples/accordion/css/accordion.css
@@ -72,15 +72,15 @@ button {
 }
 
 .Accordion-icon {
-  border: solid currentColor;
-  border-width: 0 2px 2px 0;
-  height: 0.5rem;
-  pointer-events: none;
-  position: absolute;
-  right: 2em;
-  top: 50%;
-  transform: translateY(-60%) rotate(45deg);
-  width: 0.5rem;
+	border: solid currentColor;
+	border-width: 0 2px 2px 0;
+	height: 19px;
+	pointer-events: none;
+	position: absolute;
+	right: -2px;
+	top: 19px;
+	transform: translateY(-60%) rotate(45deg);
+	width: 31px;
 }
 
 .Accordion-trigger:focus .Accordion-icon,
