--- a/examples/carousel/css/carousel-2-tablist.css
+++ b/examples/carousel/css/carousel-2-tablist.css
@@ -89,8 +89,9 @@
 /* Shared CSS for Pause and Tab Controls */
 
 .carousel-tablist .controls {
-  position: relative;
-  top: 50px;
+  position: absolute;
+  top: 1em;
+  left: 1em;
   z-index: 10;
 }
 
@@ -98,12 +99,9 @@
 
 .carousel-tablist .controls button.rotation {
   padding: 0;
-  position: absolute;
   background-color: transparent;
   border: none;
   outline: none;
-  top: 0;
-  left: 6px;
   z-index: 10;
 }
 
@@ -155,8 +153,8 @@
 
 .carousel-tablist [role="tablist"] {
   position: relative;
+  float: right;
   top: -2px;
-  text-align: center;
 }
 
 .carousel-tablist [role="tablist"] .border {
