added aria properties and correct label to button that opens anc closes listbox

--- a/examples/combobox/css/combobox-autocomplete.css
+++ b/examples/combobox/css/combobox-autocomplete.css
@@ -33,7 +33,7 @@
   outline: none;
 }
 
-.combobox button.open svg {
+.combobox button[aria-expanded="true"] svg {
   transform: rotate(180deg) translate(0, -1px);
 }
 
